--- a/docker-compose+traefik.yml
+++ b/docker-compose+traefik.yml
@@ -1,4 +1,3 @@
-version: '3.1'
 services:
   timer:
     build: '.'
@@ -7,7 +6,7 @@ services:
     env_file:
       .env
     volumes:
-      - data:/data
+      - ./bot.sqlite:/data/bot.sqlite
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=web"
@@ -18,6 +17,7 @@ services:
       - "traefik.http.services.timer-secure.loadbalancer.server.port=80"
     networks:
       - web
+
   traefik:
     image: "traefik:v2.3"
     container_name: "traefik"
@@ -45,8 +45,6 @@ services:
     networks:
       - web
     restart: always
-
-
 
 volumes:
   data:
