--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.1'
 services:
   timer:
     build: '.'
@@ -7,7 +6,7 @@ services:
     env_file:
       .env
     volumes:
-      - data:/data
+      - ./bot.sqlite:/data/bot.sqlite
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=web"
