Added action command.

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ DISCORD_TOKEN="your_discord_token"
 CCP_REDIRECT_URI="http://yourdomain.space/callback/"
 CCP_CLIENT_ID="your_client_id"
 CCP_SECRET_KEY="your_secret_key"
+ADMIN="your_discord_user_id"
