--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ CCP_REDIRECT_URI="http://yourdomain.space/callback/"
 CCP_CLIENT_ID="your_client_id"
 CCP_SECRET_KEY="your_secret_key"
 ADMIN="your_discord_user_id"
+LOG_LEVEL=INFO
