--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,34 @@
 services:
+  postgres:
+    image: postgres:15-alpine
+    restart: unless-stopped
+    container_name: timer-bot-postgres
+    environment:
+      POSTGRES_DB: timer_bot
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - timer-network
+
   timer:
     build: '.'
     restart: unless-stopped
     container_name: timer-bot
     env_file:
       .env
+    environment:
+      - DB_TYPE=${DB_TYPE:-sqlite}
+      - DB_HOST=${DB_HOST:-postgres}
+      - DB_NAME=${DB_NAME:-timer_bot}
+      - DB_USER=${DB_USER:-postgres}
+      - DB_PASSWORD=${DB_PASSWORD:-postgres}
+      - DB_PORT=${DB_PORT:-5432}
     volumes:
       - ./data:/data/
+    depends_on:
+      - postgres
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=web"
@@ -17,8 +39,12 @@ services:
       - "traefik.http.services.timer-secure.loadbalancer.server.port=80"
     networks:
       - web
+      - timer-network
 volumes:
   data:
+  postgres_data:
 networks:
   web:
     external: true
+  timer-network:
+    driver: bridge
